welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:17: error: ';' expected but ',' found.
pour un coté, il faut faire quatre pas en avant, deux pas à gauche,
            ^